@@ -8,7 +8,7 @@
                        action = 'save_user';
                 ELSIF user.user.username;
                       text('Editing User');
-                      action = 'edit_user';
+                      action = 'save_user';
                 ELSE;
                       text('New User');
                       action = 'save_user';
@@ -18,6 +18,7 @@
     <form method="POST" action="admin.pl">
         <input type="hidden" name="action" value="<?lsmb action ?>"/>
         <input type="hidden" name="entity_id" value="<?lsmb user.employee.entity_id ?>"/>
+        <input type="hidden" name="user_id" value="<?lsmb user.user.id ?>" />
         <table>
 
             <?lsmb IF user.user.username?>
