@@ -134,7 +134,7 @@ sub save_user {
     }
     my $groups = $admin->get_roles();
     $admin->{stylesheet} = $request->{stylesheet};
-    $admin->{user_id} = $admin->{user}->{id};
+    $admin->{user_id} = $admin->{user}->{id} unless $admin->{user_id};
     __edit_page($admin);
 }
 
